# inspection-rust

./: .gitignore  AUDIT_REPORT_2026-07-06.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  Dockerfile.win-build  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  internal-build.yml  release-master.yml  release.yml
.playwright-mcp/: page-2026-05-29T02-38-07-296Z.yml  page-2026-05-29T02-40-05-520Z.yml  page-2026-05-29T02-40-28-837Z.yml  page-2026-05-29T02-42-22-763Z.yml  page-2026-05-29T02-42-38-103Z.yml  page-2026-05-29T07-59-08-512Z.yml  page-2026-05-29T08-05-55-457Z.yml  page-2026-05-29T08-07-24-049Z.yml  page-2026-05-29T09-10-45-845Z.yml  page-2026-05-29T10-11-45-135Z.yml  page-2026-05-29T10-45-00-511Z.yml  page-2026-05-29T10-46-38-625Z.yml  snapshot-check.txt  snapshot-logo.txt  snapshot-reload.txt
docs/: USER_MANUAL.md
docs/superpowers/plans/: 2026-05-29-gui-redesign.md  2026-05-29-network-inspection-system.md  2026-05-29-ui-redesign.md
docs/superpowers/specs/: 2026-05-29-gui-redesign-design.md  2026-05-29-ui-redesign-design.md
scripts/: docker-build-win.sh  mingw-lld-wrapper  set-version.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  核心交换机-巡检报告.md
src-tauri/.cargo/: config.toml
src-tauri/data/: default_template.docx
src-tauri/data/reports/: report_1.md
src-tauri/docs/: USER_MANUAL.md
src-tauri/icons/: SOURCE.md
src-tauri/sql/: 001_init.sql  002_add_deepseek_provider.sql  003_add_template_type.sql  004_enrich_report_templates.sql  005_add_config_json_mode.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_config.rs  batches.rs  chat.rs  command_pool.rs  config_check.rs  devices.rs  inspection_records.rs  inspections.rs  mod.rs  offline.rs  periodic_reports.rs  report_templates.rs  reports.rs  scheduled_tasks.rs  settings.rs  templates.rs  tools.rs  vuln_scan.rs
src-tauri/src/db/: db_helpers.rs  migrations.rs  mod.rs  models.rs  query.rs  seed_data.rs
src-tauri/src/services/: ai_health.rs  ai_inspection.rs  banner_grabber.rs  chat_agent.rs  crypto.rs  cve_checker.rs  cve_db.rs  docx_engine.rs  html_util.rs  inspection_runner.rs  ip_location.rs  json_util.rs  linux_runner.rs  live_scanner.rs  log_analyzer.rs  mod.rs  nuclei_runner.rs  port_scanner.rs  report_builder.rs  report_config.rs  report_generator.rs  scheduler.rs  snmp_checker.rs  template_engine.rs  template_generator.rs  template_variables.rs  vendor_profile.rs  web_checker.rs  zabbix_checker.rs
src-tauri/tests/: e2e_full_pipeline_test.rs  e2e_ssh_test.rs  test_deepseek.rs  tools_test.rs
src/components/: ContextMenu.tsx  DataTable.tsx  Modal.tsx  PeriodicReportSection.tsx  ScheduledTaskSection.tsx  ScheduledTaskSectionV2.tsx  SearchInput.tsx  StatBadge.tsx  StatusBadge.tsx  Toolbar.tsx  VariablePicker.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx
src/features/batches/: BatchDetailPage.tsx  BatchesPage.tsx
src/features/chat/: ChatPage.tsx
src/features/commands/: CommandsPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/devices/: DevicesPage.tsx
src/hooks/: useEnterNavigation.ts  useKeyboardShortcut.ts  useShakeValidation.ts  useTheme.ts
src/layouts/: AppShell.tsx
src/lib/: constants.ts  status.ts  utils.ts
src/pages/: AboutPage.tsx  AiConfigPage.tsx  ChatPage.tsx  ConfigCheckPage.tsx  DashboardPage.tsx  DevicesPage.tsx  InspectionPage.tsx  LogAnalysisPage.tsx  ReportManagementPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TemplatesPage.tsx  ToolsPage.tsx  VulnScanPage.tsx
src/types/: index.ts
stats-server/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  package.json  server.js
stats-server/public/: index.html
(+7 files in other folders)
