[package]
name = "inspection-rust"
version = "3.0.0"
edition = "2021"
description = "网络设备巡检系统"

[lib]
name = "inspection_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
fernet = "0.2"
ssh2 = "0.9"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
dirs = "6"
parking_lot = "0.12"
serde_yaml = "0.9"
log = "0.4"

[build-dependencies]
tauri-build = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
