[package]
name = "inspection-rust"
version = "3.0.0"
edition = "2021"
description = "网络设备巡检系统"

[lib]
name = "inspection_rust_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
fernet = "0.2"
futures = "0.3"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
async-trait = "0.1"
dirs = "6"
parking_lot = "0.12"
open = "5"
regex = "1"
toml = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
